--- a/content/stylesheets/_post.scss
+++ b/content/stylesheets/_post.scss
@@ -34,7 +34,7 @@
     left: 0;
     height: 100%;
     width: 100%;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .post-detail {
